# GateLM

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  README.md  docker-compose.yml  go.work  go.work.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/ai-service/: .env.example  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
apps/ai-service/app/: main.py
apps/ai-service/app/api/: dependencies.py  rag_auth.py  routing_difficulty_auth.py  routing_lightgbm_shadow_auth.py
apps/ai-service/app/core/: config.py  errors.py  logging.py
apps/ai-service/app/model_artifacts/: __init__.py  cli.py  pii_bundle.py
apps/ai-service/app/schemas/: rag_extraction.py  routing_difficulty.py  routing_lightgbm_shadow.py  safety.py  safety_eval.py
apps/ai-service/app/services/: ai_safety_cold_start_worker.py  ai_safety_detector.py  ai_safety_latency_benchmark_runner.py  ai_safety_master_eval_runner.py  ai_safety_model_ablation_runner.py  ai_safety_promotion_gate.py  ai_safety_repeated_cold_runner.py  pii_ner_candidate_eval_cli.py  pii_ner_deployment_gate_cli.py  pii_ner_export_cli.py  pii_ner_train_cli.py  pii_ner_training_dataset_cli.py  rag_extraction.py  routing_difficulty.py  routing_difficulty_batch_benchmark.py  routing_difficulty_batcher.py  routing_lightgbm_shadow.py  safety_eval_runner.py  safety_evaluator.py
apps/ai-service/app/tests/: test_ai_safety_latency_benchmark.py  test_ai_safety_master_eval_corpus.py  test_ai_safety_master_eval_runner.py  test_ai_safety_model_ablation_runner.py  test_ai_safety_promotion_gate.py  test_ai_safety_repeated_cold.py  test_pii_ner_candidate_eval.py  test_pii_ner_deployment_gate.py  test_pii_ner_training.py  test_pii_ner_training_dataset.py  test_runtime_dependency_extras.py  test_safety_eval_actual.py  test_safety_eval_cli.py  test_safety_eval_corpus.py  test_safety_eval_evaluator_report.py
apps/ai-service/scripts/: privacy_filter_smoke.py
scripts/routing_difficulty_model/: e5-encoder-requirements.lock.txt  e5-quantizer-requirements.lock.txt  encoder-benchmark-requirements.lock.txt  encoder-candidates.v1.json  pyproject.toml  quantize_e5_onnx.py  test-requirements.lock.txt  training-policy.42d-owner-approved-15000.v1.json  training-policy.owner-approved-15000.v1.json  training-policy.semantic-b1.v1.json  training-policy.semantic-candidates.v1.json  training-policy.semantic-candidates.v2.json  training-policy.semantic-candidates.v3.json  training-policy.v1.json
scripts/routing_difficulty_model/artifacts/: difficulty-e5-encoder-manifest.v1.json  difficulty-e5-encoder-manifest.v2.json  difficulty-e5-gateway-image.linux-amd64.v1.sha256  difficulty-e5-gateway-image.linux-amd64.v2.sha256  difficulty-e5-gateway-runtime-lock.linux-amd64.v1.json  difficulty-e5-gateway-runtime-lock.linux-amd64.v2.json  difficulty-e5-pca-64.npz  difficulty-e5-pca-64.v2.npz  difficulty-logistic.semantic-b1.model-path-5000.v1.json
scripts/routing_difficulty_model/artifacts/candidates/: difficulty-candidate-a-42d.owner-approved-500.v1.json  difficulty-candidate-a-42d.owner-approved-500.v2.json  difficulty-candidate-a-42d.owner-approved-500.v3.json  difficulty-candidate-b-106d.model-path-5000.shadow.v1.json  difficulty-candidate-b-106d.owner-approved-500.v1.json  difficulty-candidate-b-106d.owner-approved-500.v2.json  (+10 more)
scripts/routing_difficulty_model/dataset/: acquire-public-prompt-sources.mjs  apply-codex-advisory-labels.mjs  apply-gpt-risk-sensitive-review-labels.mjs  apply-reviewer-b-c-consensus-labels.mjs  audit-semantic-dedup.ps1  dataset-bias.mjs  enterprise-synthetic-8000-lib.mjs  extract-aya-cache.py  extract-klue-mrc-cache.py  generate-enterprise-synthetic-8000.mjs  generate-gemini-targeted-review-packet.mjs  generate-gpt-reviewer-c-deep-review-packet.mjs  generate-gpt-risk-sensitive-slice-review-packet.mjs  generate-independent-review-packets.mjs  generate-public-prompts-7000.mjs  import-gpt-reviewer-c-deep-review-results.mjs  import-gpt-risk-sensitive-review-results.mjs  import-independent-review-results.mjs  promote-owner-approved-dataset.mjs  public-prompts-7000-lib.mjs  semantic-dedup-remediation.v1.json  semantic-dedup.py  verify-enterprise-synthetic-8000.mjs  verify-public-prompts-7000.mjs  verify-semantic-dedup.mjs
scripts/routing_difficulty_model/evidence/: difficulty-semantic-encoder-benchmark.windows-2026-07-14.json  selected-encoder.provisional-v1.lock.json
scripts/routing_difficulty_model/gatelm_difficulty_model/: __init__.py  calibration_feasibility.py  calibration_feasibility_cli.py  candidate_cli.py  candidate_training.py  canonical_dataset.py  cli.py  e5_encoder_cli.py  encoder_artifacts.py  encoder_benchmark.py  encoder_runtime.py  encoder_worker.py  gateway_holdout_reference.py  lightgbm_dimension_tuning_bridge.py  lightgbm_dimension_tuning_bridge_cli.py  lightgbm_e5_base_encoder.py  lightgbm_embedding_artifacts.py  lightgbm_embedding_calibration.py  lightgbm_embedding_experiment.py  lightgbm_embedding_experiment_cli.py  lightgbm_embedding_reporting.py  lightgbm_embedding_search.py  lightgbm_four_way.py  lightgbm_four_way_cli.py  lightgbm_input_ablation.py  lightgbm_input_ablation_cli.py  lightgbm_shadow.py  model_path_5000.py  promotion_holdout.py  semantic_b1.py  semantic_features.py  semantic_heads.py  semantic_heads_cli.py  threshold_candidate.py  threshold_candidate_cli.py  training.py
scripts/routing_difficulty_model/tests/: test_calibration_feasibility.py  test_candidate_training.py  test_encoder_artifacts.py  test_encoder_benchmark.py  test_encoder_runtime.py  test_gateway_holdout_reference.py  test_gateway_shadow_go_parity.py  test_lightgbm_dimension_tuning_bridge.py  test_lightgbm_embedding_artifacts.py  test_lightgbm_embedding_calibration.py  test_lightgbm_embedding_experiment.py  test_lightgbm_four_way.py  test_lightgbm_input_ablation.py  test_lightgbm_shadow.py  test_model_path_5000.py  test_promotion_holdout.py  test_semantic_b1.py  test_semantic_features.py  test_semantic_heads.py  test_semantic_heads_cli.py  test_single_request_cli.py  test_threshold_candidate.py  test_training.py
(+6294 files in other folders)
