[project]
name = "gatelm-routing-difficulty-model"
version = "0.0.0"
description = "Offline-only GateLM difficulty Logistic Regression training tooling"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26,<3",
  "scikit-learn>=1.4,<2",
]

[project.scripts]
gatelm-train-difficulty = "gatelm_difficulty_model.cli:main"
gatelm-benchmark-difficulty-encoder = "gatelm_difficulty_model.encoder_benchmark:main"
gatelm-train-difficulty-semantic-heads = "gatelm_difficulty_model.semantic_heads_cli:main"

[project.optional-dependencies]
encoder-benchmark = [
  "huggingface-hub==0.33.4",
  "numpy==2.2.6",
  "onnx==1.18.0",
  "onnxruntime==1.22.1",
  "psutil==7.0.0",
  "safetensors==0.5.3",
  "scikit-learn==1.7.0",
  "scipy==1.15.3",
  "tokenizers==0.21.2",
  "transformers==4.53.2",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gatelm_difficulty_model*"]

[tool.unittest]
start-directory = "tests"
pattern = "test_*.py"
