[project]
name = "gatelm-routing-difficulty-model"
version = "0.0.0"
description = "Offline-only GateLM E5 encoder and difficulty model training tooling"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26,<3",
  "scikit-learn>=1.4,<2",
]

[project.scripts]
gatelm-train-difficulty = "gatelm_difficulty_model.cli:main"
gatelm-difficulty-e5-encoder = "gatelm_difficulty_model.e5_encoder_cli:main"
gatelm-train-difficulty-semantic-heads = "gatelm_difficulty_model.semantic_heads_cli:main"
gatelm-train-difficulty-semantic-candidates = "gatelm_difficulty_model.candidate_cli:main"
gatelm-gateway-holdout-reference = "gatelm_difficulty_model.gateway_holdout_reference:main"
gatelm-difficulty-calibration-feasibility = "gatelm_difficulty_model.calibration_feasibility_cli:main"
gatelm-difficulty-threshold-candidate = "gatelm_difficulty_model.threshold_candidate_cli:main"
gatelm-train-difficulty-model-path-5000 = "gatelm_difficulty_model.model_path_5000:main"
gatelm-lightgbm-embedding-experiment = "gatelm_difficulty_model.lightgbm_embedding_experiment_cli:main"
gatelm-lightgbm-four-way = "gatelm_difficulty_model.lightgbm_four_way_cli:main"

[project.optional-dependencies]
lightgbm-shadow = [
  "lightgbm==4.6.0",
  "numpy==2.2.6",
  "scikit-learn==1.7.0",
]
lightgbm-embedding-experiment = [
  "lightgbm==4.6.0",
  "numpy==2.2.6",
  "scikit-learn==1.7.0",
]
e5-encoder = [
  "huggingface-hub==0.33.4",
  "numpy==2.2.6",
  "onnx==1.18.0",
  "onnxruntime==1.22.1",
  "psutil==7.0.0",
  "safetensors==0.5.3",
  "scikit-learn==1.7.0",
  "scipy==1.15.3",
  "tokenizers==0.21.2",
  "transformers==4.53.2",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gatelm_difficulty_model*"]

[tool.unittest]
start-directory = "tests"
pattern = "test_*.py"
